# FurryWolfEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh
Notes/: Camera.md  DepthTesting.md  GraphicsPipeline.md  Index.md  Lighting.md  Math.md  Mesh Rendering Setup.md  ModelImport.md  OpenGLIntro.md  Questions.md  Resources.md  Shaders.md  Shadows.md  Stencil Testing.md  Texture.md
editor/: FurryWolfEditor.py  FurryWolfWindow.py  main.py
editor/EditorSettings/: EditorConfig.json
editor/bindings/: EngineBindings.cpp
editor/bindings/src/: EngineBindings.cpp
editor/models/: ProcessManager.py
editor/models/data/: AppConfigs.py  DataCenter.py
editor/utils/: WolfUtils.py  Worker.py
editor/views/: FurrywolfApp.py  LaunchWindow.py
editor/views/engineEditor/: FurryWolfEditor.py
editor/views/launcher/: LaunchWindow.py
include/utils/: IWindowContext.h  Mesh.h  Texture.h
includes/: Camera.h  Main.h
includes/engine/components/: CameraComponent.h  Component.h  DirectionalLightComponent.h  IndexedDrawMeshComponent.h  Light.h  LightComponent.h  ModelComponent.h  PointLightComponent.h  SkyboxComponent.h  SpotLightComponent.h  TransformComponent.h
includes/engine/core/: FurryWolfEngine.h  GameObject.h  GameObjectFactory.h  MeshComponentFactory.h  ResourceManager.h  Scene.h  SceneMaker.h  SceneManager.h
includes/engine/includeHeaders/: ResourceManagementHeaders.h  TextureHeaders.h
includes/engine/inputs/: InputSystem.h
includes/engine/render/: Camera.h  CubeMap.h  FrameBuffer.h  LightSourceShaderProgram.h  Material.h  Mesh.h  PhongShader.h  Shader.h  ShaderProgram.h  Texture.h  VerticesMesh.h
includes/engine/util/: ImageLoader.h  Utils.h
includes/engine/window/: IWindow.h  WolfGlfwWindow.h
includes/game/: FancyLight.h  SceneSwitcher.h  TestUtilComponent.h
includes/glad/: glad.h
includes/utils/: Material.h  MyGlfwWindow.h  ShaderProgram.h  Texture.h
includes/utils/Lights/: DirectionalLight.h  Light.h  PointLight.h
includes/utils/Time/: FloatTimerBase.h  GlfwTimer.h  ITime.h  Time.h
lib/windows/: assimp-vc143-mtd.lib  glfw3.lib  zlibstaticd.lib
shaders/: depthVisualizer.frag  fragment.glsl  lightSourceFrag.frag  lightSourceFragment.glsl  lightingModelFragment.glsl  outliner.frag  phongFrag.frag  phongVert.vert  simpleUnlit.frag  stencilOutline.frag  vertex.glsl
shaders/UI/: BasicScreenFrag.frag  UniversalVertexShader.vert
shaders/skybox/: skyCube.frag  skyCube.vert
src/: Main.cpp  glad.c
src/engine/components/: CameraComponent.cpp  DirectionalLightComponent.cpp  (+7 more)
src/game/: FancyLight.cpp  SceneSwitcher.cpp  TestUtilComponent.cpp
tests/math/: TransformTest.cpp
(+62 files in other folders)
